lab4/store/txn-list-append/20220505T143023.000+0100/node-logs/n2.log
  File "/home/peter/Documents/tf/lab4/cent.py", line 41
    elif msg.body.type == 'txnReplication'
                                          ^
SyntaxError: expected ':'
